# askbase

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  Dockerfile  README.md  SECURITY.md  awesome-use-cases.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  docs-site.yml
blog/: 01-rag-support-teams.md  02-vector-search-vs-keyword-search.md
data/: knowledge_base.txt
data/seed/: faq.md  product-guide.md  troubleshooting.md
docs/: architecture.md  knowledge-base.txt
docs-site/: README-conversao.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json
docs-site/k8s/: deployment.yaml  ingress.yaml  service.yaml
docs-site/src/: content.config.ts
docs-site/src/content/docs/: api-reference.md  architecture.md  (+3 more)
docs/deploy/: aws.md  bare-metal.md  gcp.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: page.tsx
frontend/components/: ChatBox.tsx
frontend/tests/: chatbox.test.tsx
frontend/tests/e2e/: home.spec.ts
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml
results/: perf-results.md
rust-ranker/: Cargo.toml
rust-ranker/src/: main.rs
scripts/: chaos_test.sh  load_test.py  quality-check.sh  run-demo.sh  soak_test.sh
src/: chunk.ts  demo.ts  ingest.ts  llm.ts  pipeline.ts  retriever.ts  types.ts
src/rag_pipeline/: __init__.py  api.py  chunking.py  cli.py  documents.py  evaluation.py  logging_utils.py  observability.py  pipeline.py  retrieval.py  security.py
test/: chunk.test.ts  pipeline.test.ts  retriever.test.ts
tests/: test_api_cli.py  test_chunking.py  test_cli_logging.py  test_coverage_boost.py  test_coverage_final.py  test_integration.py  test_pipeline.py
(+13 files in other folders)
