[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline-demo-py"
version = "0.1.0"
description = "Minimal local RAG pipeline demo in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["scikit-learn>=1.4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_pipeline*"]
